# casablanca

./: .gitignore  jit_example.py  leap.yaml  leap_binder.py  leap_custom_test.py  leap_mapping.yaml  pyproject.toml  save_data.py  utils.py
casablanca/: config.py  config.yaml  config.yml  losses.py
casablanca/data/: ids_metadata.json  preprocess.py  save_frames_to_gcs.py  test.json  test1.json
casablanca/utils/: gcs_utils.py  general_utils.py  loss.py  metrics.py  packages.py  visuelizers.py
data_preperation/: prepare_files_mapping.py  save_frames_data.py
export/: onnx_decoder.py  onnx_encoder.py  utils.py
lists/: fileparts.txt  files.txt
model/: lia_encoder_decoder.onnx
networks/: styledecoder.py
