[tool.poetry]
name = "casablanca"
version = "0.1.0"
description = ""
authors = ["Chen Rothschild <chen.rothschild@tensorleap.ai>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
code-loader = "^1.0.39"
pandas = "2.0.3"
matplotlib = "3.7.5"
pyyaml = "^6.0.1"
datasets = "^2.18.0"
opencv-python = "^4.9.0.80"
torch = "^2.2.2"
torchvision = "^0.17.2"
google-cloud-storage = "^2.16.0"
onnxruntime = "^1.17.1"
av = "^12.0.0"
scipy = "1.9.3"
zipfile36 = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"